--- a/tests/notebooks/test_sequence_generator_and_database.ipynb
+++ b/tests/notebooks/test_sequence_generator_and_database.ipynb
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1782,7 +1782,7 @@
    "source": [
     "# check if save and load works\n",
     "dir_database = oligos.save_database(\n",
-    "    dir_database=dir_output, region_ids=\"random_sequences2\"\n",
+    "    name_database=dir_output, region_ids=\"random_sequences2\"\n",
     ")\n",
     "\n",
     "oligos2.load_database(dir_database, database_overwrite=True)\n",
